--- a/html5form.html
+++ b/html5form.html
@@ -23,14 +23,16 @@
         <div>
             <label for="email">email input type:</label>
             <input type="email" id="email" name="email">
+            <error-output class="email-error" for="email"></error-output>
         </div>
         <div>
             <label for="url">url input type:</label>
             <input type="url" id="url" name="url">
         </div>
         <div>
-            <label for="number">numberinput type:</label>
+            <label for="number">number input type:</label>
             <input type="number" id="number" name="number">
+            <error-output class="number-error" for="number"></error-output>
         </div>
         <div>
             <label for="tel">tel input type:</label>
@@ -56,15 +58,6 @@
         </div>
     </form>
     <script>
-        const pwd = document.querySelector('#pwd');
-        const pwdError = document.querySelector('.pwd-error'); 
-        pwd.addEventListener('input', function() {
-        let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$'); 
-        if (nameRegex.test(pwd.value))
-          pwdError.textContent = "";
-        else pwdError.textContent = "Password is Incorrect";
-        });
-
         const text = document.querySelector('#text');
         const textError = document.querySelector('.text-error'); 
         text.addEventListener('input', function() {
@@ -72,6 +65,33 @@
         if (nameRegex.test(text.value))
           textError.textContent = "";
         else textError.textContent = "Name is Incorrect";
+        });
+
+        const email = document.querySelector('#email');
+        const emailerror = document.querySelector('.email-error')
+        email.addEventListener('input',function(){
+            let emailRegex = RegExp('^[a][b][c][.][a-zA-Z]{1,}[@][b][l][.][c][o][.][a-z]{1,}$');
+            if(emailRegex.test(email.value))
+              emailerror.textContent="";
+            else emailerror.textContent = "Email is incorrect";
+        });
+
+        const number = document.querySelector('#number');
+        const numberError = document.querySelector('.number-error'); 
+        number.addEventListener('input', function() {
+        let numberRegex = RegExp('^[1-9]{1}[0-9]{1}[6-9]{1}[0-9]{9}$'); 
+        if (numberRegex.test(number.value))
+          numberError.textContent = "";
+        else numberError.textContent = "Number is Incorrect";
+        });
+
+        const pwd = document.querySelector('#pwd');
+        const pwdError = document.querySelector('.pwd-error'); 
+        pwd.addEventListener('input', function() {
+        let passwordRegex = RegExp('^[a-zA-Z]{8}$'); 
+        if (passwordRegex.test(pwd.value))
+        pwdError.textContent = "";
+        else pwdError.textContent = "Password is Incorrect";
         });
 
         const salary = document.querySelector('#salary');
